--- a/Changelog.txt
+++ b/Changelog.txt
@@ -24,6 +24,7 @@ Version 1.4.06-dev
  ! Players will no longer pickup items to their hotbar while using Unarmed
  ! ExperienceAPI methods will now throw InvalidSkillException if the skill name passed in is invalid.
  ! Changed default value for recently-hurt cooldown between teleports, this is also fully configurable now
+ ! Changed the amount of info messages in the console when enabling/disabling, enable Verbose_Logging to enable them again
 
 Version 1.4.05
  + Added option to allow refreshing of chunks after block-breaking abilities. (Disabled by default)
