Added a new Party item share category "Misc" which contains a list of configurable items.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -15,6 +15,7 @@ Version 1.4.06-dev
  + Added new API method to McMMOPlayerLevelUpEvent to set levels gained
  + Added new permission node for /ptp; mcmmo.commands.ptp.send (enabled by default)
  + Added configurable cooldown and warmup times when using /ptp
+ + Added a new Party item share category "Misc" which contains a list of configurable items. (By default all tools and armor)
  = Fixed bug where players were able to join the same party multiple times
  = Fixed displaying partial names when trying to use /ptp
  = Fixed wolves from Call of the Wild only having 8 health
