Changed Call of the Wild, newly summoned pet's will have a custom name
Closes #972

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -25,6 +25,7 @@ Version 1.4.06-dev
  = Fixed NPE when trying to tab-complete /mctop
  = Fixed Fishing treasures always having the same enchants
  ! Changed Berserk to add items to inventory rather than denying pickup
+ ! Changed Call of the Wild, newly summoned pet's will have a custom name. (added permission node to disable this)
  ! Changed Chimaera Wing's recipe result to use the ingredient Material
  ! Players will no longer pickup items to their hotbar while using Unarmed
  ! ExperienceAPI methods will now throw InvalidSkillException if the skill name passed in is invalid.
