--- a/Changelog.txt
+++ b/Changelog.txt
@@ -24,6 +24,7 @@ Version 1.4.06-dev
  = Fixed mcmmo.commands.ptp.send not being set by default
  = Fixed NPE when trying to tab-complete /mctop
  = Fixed Fishing treasures always having the same enchants
+ = Fixed Smelting returning ink sacs instead of Lapis when double-dropping
  ! Changed Berserk to add items to inventory rather than denying pickup
  ! Changed Call of the Wild, newly summoned pet's will have a custom name. (added permission node to disable this)
  ! Changed Chimaera Wing's recipe result to use the ingredient Material
