Replace SkillMonitorTask with 3 unique timers instead. This should greatly optimize our tool and ability cooldown tracking and hopefully reduce server load.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -35,6 +35,7 @@ Version 1.4.06-dev
  ! Changed default value for recently-hurt cooldown between teleports, this is also fully configurable now
  ! Changed the amount of info messages in the console when enabling/disabling, enable Verbose_Logging to enable them again
  ! Items dropped by players are now being tracked and are not being shared with party members
+ ! Optimized tracking of tool & ability cooldowns.
 
 Version 1.4.05
  + Added option to allow refreshing of chunks after block-breaking abilities. (Disabled by default)
