--- a/src/main/resources/locale/locale_cs_CZ.properties
+++ b/src/main/resources/locale/locale_cs_CZ.properties
@@ -82,6 +82,7 @@ Fishing.Effect.3=Na\u0161el si o\u010darovanou v\u011bc
 Fishing.Effect.4=Shake (vs. Entities)
 Fishing.Effect.5=Vyklepni p\u0159edm\u011bty z p\u0159\u00ed\u0161er s prutem
 Fishing.Effect.6=Ryb\u00e1\u0159\u016fv apetit
+Fishing.Effect.8=Mistr Ryb\u00e1\u0159
 Fishing.Enchant.Chance=[[RED]]\u0160ance na magick\u00e9ho lovce: [[YELLOW]]{0}
 Fishing.ItemFound=[[GRAY]]Nasel si poklad!
 Fishing.Listener=Rybareni:
@@ -98,6 +99,8 @@ Herbalism.Ability.GTh=[[GREEN]]**ZAHRADNIK**
 Herbalism.Ability.HylianLuck=[[RED]]Hylian Luck zm\u011bn\u011bn: [[YELLOW]]{0}
 Herbalism.Ability.Lower=[[GRAY]]**SKLONIL JSI SVOJI MOTYKU**
 Herbalism.Ability.Ready=[[GREEN]]**PRIPRAVIL JSI SVOU MOTYKU**
+Herbalism.Ability.ShroomThumb.Chance=[[RED]]\u0160ance na dovednost Houba\u0159: [[YELLOW]]{0}
+Herbalism.Ability.ShroomThumb.Fail=[[RED]]**HOUBA\u0158 SELHAL**
 Herbalism.Effect.0=Green Terra (SCHOPNOST)
 Herbalism.Effect.1=\u0160\u00ed\u0159en\u00ed planety, 3x v\u00edce drop\u016f
 Herbalism.Effect.2=Zahradnik (Wheat)
@@ -109,6 +112,7 @@ Herbalism.Effect.7=Zvysuje obnovu hladu ze sklizenych jidel
 Herbalism.Effect.8=Dvojnasobny zisk (vsechny byliny)
 Herbalism.Effect.9=Zdvojnasobi normalni zisk
 Herbalism.Effect.11=D\u00e1v\u00e1 malou \u0161anci naj\u00edt vz\u00e1cn\u00e9 p\u0159edm\u011bty
+Herbalism.Effect.12=Houba\u0159
 Herbalism.HylianLuck=[[GREEN]]The luck of Hyrule t\u011b doprov\u00e1z\u00ed!
 Herbalism.Listener=Bylinarstvi:
 Herbalism.SkillName=Bylinkarstvi
@@ -221,6 +225,8 @@ Taming.Ability.Bonus.4=Otresuvzdorny
 Taming.Ability.Bonus.6=Nabrousene drapy
 Taming.Ability.Bonus.8=Rychl\u00e9 Ob\u010derstven\u00ed
 Taming.Ability.Bonus.9={0} \u0161ance na vyl\u00e9\u010den\u00ed p\u0159i \u00fatoku
+Taming.Ability.Bonus.10=Svat\u00fd Chrt
+Taming.Ability.Bonus.11=Obnovuje zdrav\u00ed p\u0159i zran\u011bn\u00ed magi\u00ed nebo lektvarem
 Taming.Combat.Chance.Gore=[[RED]]\u0160ance na nabodnut\u00ed: [[YELLOW]]{0}
 Taming.Effect.0=Tradice \u0161elem
 Taming.Effect.1=Na\u0159\u00edznut\u00ed kost\u00ed kontroluje vlky & oceloty
@@ -232,6 +238,8 @@ Taming.Effect.14=[[GRAY]]COTW (Ocelot): Skrc se a levym-klikem s {0} rybami v ru
 Taming.Effect.15=[[GRAY]]COTW (Ocelot): Skrc se a levym-klikem s {0} kostmi v ruce
 Taming.Effect.16=Rychl\u00e9 Ob\u010derstven\u00ed
 Taming.Effect.17=\u0160ance na vyl\u00e9\u010den\u00ed vlka p\u0159i \u00fatoku
+Taming.Effect.18=Svat\u00fd Chrt
+Taming.Effect.19=Uzdraven Magi\u00ed & Lektvarem
 Taming.Effect.2=Krveprolit\u00ed
 Taming.Effect.3=Kritick\u00fd \u00fader, kter\u00fd aplikuje krv\u00e1cen\u00ed
 Taming.Effect.4=Nabrousene drapy
@@ -302,6 +310,7 @@ Combat.Gore=[[GREEN]]**PRUNIK**
 Combat.StruckByGore=[[RED]]**BYL JSI PROBODNUT**
 Combat.TargetDazed=C\u00edl byl [[DARK_RED]]Omr\u00e1\u010den
 Combat.TouchedFuzzy=[[DARK_RED]]Nejasne dotcen. Mas zavrat.
+mcMMO.Description=[[DARK_AQUA]]O [[YELLOW]]mcMMO[[DARK_AQUA]] Projekt:,[[GOLD]]mcMMO je [[RED]]open source[[GOLD]] RPG m\u00f3d vytvo\u0159en\u00fd v \u00fanoru 2011,[[GOLD]]autorem [[BLUE]]nossr50[[GOLD]]. C\u00edl projektu je poskytnout kvalitu RPG.,[[DARK_AQUA]]Tipy:,[[GOLD]] - [[GREEN]]Pou\u017eij [[RED]]/mcmmo help[[GREEN]] pro zobrazen\u00ed dostupn\u00fdch p\u0159\u00edkaz\u016f,[[GOLD]] - [[GREEN]]Type [[RED]]/SKILLNAME[[GREEN]] pro zobrazen\u00ed detailn\u00edch informac\u00ed o skillu,[[DARK_AQUA]]V\u00fdvoj\u00e1\u0159i:,[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Majitel),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Vedouc\u00ed projektu),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](V\u00fdvoj\u00e1\u0159),[[GOLD]] - [[GREEN]]bm01 [[BLUE]](V\u00fdvoj\u00e1\u0159),[[GOLD]] - [[GREEN]]TfT_02 [[BLUE]](V\u00fdvoj\u00e1\u0159),[[GOLD]] - [[GREEN]]Glitchfinder [[BLUE]](V\u00fdvoj\u00e1\u0159),[[GOLD]] - [[GREEN]]t00thpick1 [[BLUE]](V\u00fdvoj\u00e1\u0159),[[DARK_AQUA]]U\u017eite\u010dn\u00e9 odkazy:,[[GOLD]] - [[GREEN]]https://github.com/mcMMO-Dev/mcMMO/issues[[GOLD]] Nahla\u0161ov\u00e1n\u00ed Chyb,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] IRC Chat,
 Commands.addlevels.AwardAll.2=[[RED]]V\u0161echny schopnosti byly zm\u011bn\u011bny na {0}.
 Commands.addlevels.AwardSkill.1=[[GREEN]]Tvoje dovednost {1} je nyn\u00ed {0}!
 Commands.addxp.AwardSkill=[[GREEN]]Z\u00edskal si {0} zku\u0161enost\u00ed v {1}!
@@ -327,10 +336,18 @@ Commands.mcrank.Heading=[[GOLD]]-=OSOBN\u00cd HODNOCEN\u00cd=-
 Commands.mcremove.Success=[[GREEN]]{0} byl \u00fasp\u011b\u0161n\u011b vymaz\u00e1n z datab\u00e1ze!
 Commands.mctop.Tip=[[GOLD]]Tip: Pro osobn\u00ed statistiky pou\u017eij [[RED]]/mcrank[[GOLD]]!
 Commands.mmoedit=[player] <skill> <newvalue> [[RED]] - Modify target
+Commands.mmoedit.AllSkills.1=[[GREEN]]Tv\u00e1 \u00farove\u0148 ve v\u0161ech skillech byla nastavena na {0}!
 Commands.mmoedit.Modified.1=[[GREEN]]Tv\u016fj skill v  {0} byl pozm\u011bn\u011bn na {1}!
 Commands.ModDescription=[[RED]]- Precti si strucny popis pluginu
 Commands.NoConsole=Tento prikaz nepodporuje pouziti z konzole.
+Commands.Notifications.Off=Oznamov\u00e1n\u00ed schopnost\u00ed [[RED]]vypnuto
+Commands.Notifications.On=Oznamov\u00e1n\u00ed schopnost\u00ed [[GREEN]]zapnuto
+Commands.Offline=[[RED]]Tento p\u0159\u00edkaz nefunguje pro offline hr\u00e1\u010de.
 Commands.Other=[[GREEN]]--OSTATNI PRIKAZY--
+Commands.Party.ShareMode=[[DARK_GRAY]]M\u00d3D SD\u00cdLEN\u00cd:
+Commands.Party.ItemShare=[[GRAY]]P\u0158EDM\u011aT [[DARK_AQUA]]({0})
+Commands.Party.ExpShare=[[GRAY]]EXP [[DARK_AQUA]]({0})
+Commands.Party.ItemShareCategories=[[DARK_GRAY]]Sd\u00edl\u00edm p\u0159edm\u011bty: [[GRAY]][[ITALIC]]{0}
 Commands.Party.Accept=[[RED]]- Potvrdit pozvanku do party
 Commands.Party.Chat.Off=Chat jenom pro partu [[RED]]Vypnuty
 Commands.Party.Chat.On=Party chat [[RED]]Off
@@ -338,12 +355,14 @@ Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])
 Commands.Party.Commands=[[GREEN]]--P\u0158\u00cdKAZY PARTY--
 Commands.Party.Invite.0=[[RED]]VAROVANI: [[GREEN]]Obdrzel jsi pozvanku do party {0} od {1}
 Commands.Party.Rename=[[GRAY]]Jm\u00e9no party zm\u011bn\u011bno na: [[WHITE]]{0}
+Commands.Party.SetSharing=[[GRAY]]Parta {0} sd\u00edl\u00ed nastaven\u00ed na: [[DARK_AQUA]]{1}
 Commands.Party.Kick=[[RED]]Byl jsi vyhozen z party {0}!
 Commands.Party.Leave=[[RED]]Opustil jsi party
 Commands.Party.None=[RED]]Nejsi v zadne party.
 Commands.Party.Quit=[[RED]]- Opustil jsi svoji aktualni partu
 Commands.Party.Teleport=<hrac> [[RED]]- Teleport ke clenovi party
 Commands.Party.Toggle=[[RED]]- Zapnout party chat
+Commands.ptp.NoWorldPermissions=[[RED]][mcMMO] Nem\u00e1\u0161 opr\u00e1vn\u011bn\u00ed pro teleportaci do sv\u011bta {0}.
 Commands.PowerLevel.Leaderboard=[[YELLOW]]--mcMMO[[BLUE]] Rebricek [[YELLOW]]Celkovych levelu--
 Commands.PowerLevel=[[DARK_RED]]CELKOVY LEVEL: [[GREEN]]{0}
 Commands.Reset.All=[[GREEN]] Vsechny vase dovednosti byli byli uspesne resetov\u00e1ny.
@@ -355,15 +374,28 @@ Commands.SkillInfo=/<skill> [[RED]]- Zjist\u00ed\u0161 bliz\u0161\u00ed informac
 Commands.Stats.Self=Tvoje statistiky
 Commands.Stats=[[RED]]- Shl\u00e9dnout svoje mcMMO statistiky
 Commands.ToggleAbility=[[RED]]- Aktivace schopnosti prav\u00fdm tla\u010d\u00edtkem.
+Commands.Usage.0=[[RED]]Spr\u00e1vn\u00e9 pou\u017eit\u00ed je /{0}
 Commands.Usage.Message=zprava
 Commands.Usage.Page=stranka
+Commands.Usage.PartyName=jm\u00e9no
 Commands.Usage.Password=heslo
 Commands.Usage.Player=hrac
+Commands.Usage.Rate=hodnota
 mcMMO.NoInvites=[[RED]]Momentalne nemas zadne pozvanky
 mcMMO.NoPermission=[[DARK_RED]]Nedostatecna prava
 mcMMO.NoSkillNote=[[DARK_GRAY]]Pokud nemas pristup k schopnosti, nebude zobrazena.
 Party.Forbidden=[mcMMO] Party nejsou povoleny (pod\u00edvej se do Povolen\u00ed)
+Party.Help.0=[[RED]]Spr\u00e1vn\u00e9 pou\u017eit\u00ed je [[DARK_AQUA]]{0} <player> [password].
+Party.Help.1=[[RED]]Pro vytvo\u0159en\u00ed party, pou\u017eij [[DARK_AQUA]]{0} <name> [password].
+Party.Help.2=[[RED]]Pora\u010f se s [[DARK_AQUA]]{0} [[RED]]pro v\u00edce informac\u00ed
+Party.Help.3=[[RED]]Pou\u017eij [[DARK_AQUA]]{0} <player> [password] [[RED]]pro vstup nebo [[DARK_AQUA]]{1} [[RED]]pro opu\u0161t\u011bn\u00ed
+Party.Help.4=[[RED]]Pro uzam\u010den\u00ed nebo odem\u010den\u00ed tv\u00e9 party, pou\u017eij [[DARK_AQUA]]{0}
+Party.Help.5=[[RED]]Pro ochr\u00e1n\u011bn\u00ed va\u0161\u00ed party heslem, pou\u017eij [[DARK_AQUA]]{0} <password>
+Party.Help.6=[[RED]]Pro vykopnut\u00ed hr\u00e1\u010de z tv\u00e9 party, pou\u017eij [[DARK_AQUA]]{0} <player>
+Party.Help.7=[[RED]]Pro p\u0159esunut\u00ed v\u016fdcovstv\u00ed tv\u00e9 party, pou\u017eij [[DARK_AQUA]]{0} <player>
+Party.Help.8=[[RED]]Pro zru\u0161en\u00ed va\u0161\u00ed party pou\u017eij [[DARK_AQUA]]{0}
 Party.InvalidName=[[DARK_RED]]Toto nen\u00ed mo\u017en\u00e9 jm\u00e9no pro partu.
+Party.Invite.Self=[[RED]]Nem\u016f\u017ee\u0161 pozvat s\u00e1m sebe!
 Party.IsLocked=[[RED]]Tahla parta je ji\u017e uzamknuta!
 Party.IsntLocked=[[RED]]Tato parta je zamknuta!
 Party.Locked=[[RED]]Parta je zamnuta, pouze velitel party t\u011b m\u016f\u017ee p\u0159izvat.
@@ -371,17 +403,29 @@ Party.NotInYourParty=[[DARK_RED]]{0} nen\u00ed ve tv\u00e9 part\u011b.
 Party.Owner.New=[[GREEN]]{0} se stal v\u016fdce party.
 Party.Owner.NotLeader=[[DARK_RED]]U\u017e nejsi v\u016fdce party.
 Party.Owner.Player=[[GREEN]]Nyn\u00ed jsi v\u016fdce party.
+Party.Password.None=[[RED]]Tato parta je zaheslov\u00e1na. Pros\u00edm napi\u0161te heslo pro vstup.
 Party.Password.Incorrect=[[RED]]Heslo k part\u011b je \u0161patn\u011b!
 Party.Password.Set=[[GREEN]]Heslo do party nastaveno na {0}
 Party.Player.Invalid=[[RED]]Tohle neni platny hrac.
 Party.NotOnline=[[DARK_RED]]{0} nen\u00ed online!
 Party.Player.InSameParty=[[RED]]{0} u\u017e je na va\u0161\u00ed party!
 Party.PlayerNotInParty=[[DARK_RED]]{0} nen\u00ed na party
+Party.Specify=[[RED]]Mus\u00ed\u0161 specifikovat partu.
 Party.Teleport.Dead=[[RED]]Nemuzes se teleportovat k mrtvemu hraci.
+Party.Teleport.Hurt=[[RED]]Byl jsi zran\u011bn v posledn\u00edch {0} sekund\u00e1ch a nem\u016f\u017ee\u0161 se teleportovat.
 Party.Teleport.Player=[[GREEN]]Byl jsi teleportovan k {0}.
 Party.Teleport.Self=[[RED]]Nem\u016f\u017ee\u0161 se teleportovat s\u00e1m na sebe!
 Party.Teleport.Target=[[GREEN]]{0} se k tobe teleportoval.
+Party.Rename.Same=[[RED]]Toto u\u017e je jm\u00e9no va\u0161\u00ed party!
+Party.Join.Self=[[RED]]Nem\u016f\u017ee\u0161 nabrat sebe!
 Party.Unlocked=[[GRAY]]Party je odemknuta
+Party.ShareType.Exp=EXP
+Party.ShareType.Item=P\u0158EDM\u011aT
+Party.ShareMode.None=\u017d\u00c1DN\u00dd
+Party.ShareMode.Equal=STEJN\u00dd
+Party.ShareMode.Random=N\u00c1HODN\u00dd
+Party.ExpShare.Disabled=[[RED]]Sd\u00edlen\u00ed party zku\u0161enost\u00ed je vypnuto.
+Party.ItemShare.Disabled=[[RED]]Sd\u00edlen\u00ed item\u016f v part\u011b je zak\u00e1zan\u00e9.
 Commands.XPGain.Acrobatics=Padani
 Commands.XPGain.Archery=Zabijen\u00ed monster.
 Commands.XPGain.Axes=Utoceni na monstra
@@ -405,7 +449,9 @@ Commands.xprate.started.0=[[GOLD]]XP EVENT PRO mcMMO ZA\u010cAL!
 Commands.xprate.started.1=[[GOLD]]mcMMO XP N\u00c1SOBEK JE NYN\u00cd {0}x!
 XPRate.Event=[[GOLD]]mcMMO je nyni v modu zmeneneho pomeru ziskavani dovednosti! Nasobek pomeru dovednosti je {0}x!
 Effects.Effects=EFEKTY
+Effects.Child=[[DARK_GRAY]]LVL: [[GREEN]]{0}
 Effects.Level=[[DARK_GRAY]]LVL: [[GREEN]]{0} [[DARK_AQUA]]XP[[YELLOW]]([[GOLD]]{1}[[YELLOW]]/[[GOLD]]{2}[[YELLOW]])
+Effects.Parent=[[GOLD]]{0} -
 Effects.Template=[[DARK_AQUA]]{0}: [[GREEN]]{1}
 Guides.Acrobatics=[[DARK_AQUA]]O akrobacii:\n[[YELLOW]]Akrobacie je um \u00fa\u017easn\u00e9ho pohybu v mcMMO.\n[[YELLOW]]D\u00e1v\u00e1 ti bonusy v boji a bonusy po\u0161kozen\u00ed v prost\u0159ed\u00ed.\n[[DARK_AQUA]]Zisk XP:\n[[YELLOW]]K z\u00edsk\u00e1n\u00ed XP v t\u00e9to dovednosti mus\u00ed\u0161 uhybat\n[[YELLOW]]p\u0159ed ranami nep\u0159\u00edtele, nebo p\u0159e\u017e\u00edvat p\u00e1dy.\n[[DARK_AQUA]]Jak fungujou kotrmelce?\n[[YELLOW]]M\u00e1\u0161 \u0161anci kdy\u017e pad\u00e1\u0161 zmen\u0161it \u0161kody, kter\u00e9\n[[YELLOW]]by ti zp\u016fsobily p\u00e1dy. Dr\u017e kl\u00e1vesu na skr\u010den\u00ed\n[[YELLOW]]p\u0159i p\u00e1du k v\u00fd\u0161en\u00ed \u0161ance na kotrmelec.\n[[YELLOW]]T\u00edm vznik\u00e1 P\u016fvabn\u00fd kotrmelec m\u00edsto standartn\u00edho.\n[[YELLOW]]P\u016fvabn\u00e9 kotrmelce jsou jako norm\u00e1ln\u00ed, ale m\u00e1\u0161 2x v\u011bt\u0161\u00ed \u0161anci\n[[YELLOW]]p\u0159e\u017e\u00edt p\u00e1d a jsou bezpe\u010dn\u011bj\u0161\u00ed ne\u017e norm\u00e1ln\u00ed\n[[YELLOW]]\u0160ance na kotrmelec jsou ovlivn\u011bny tv\u00fdmi dovednostmi\n[[DARK_AQUA]]Jak funguje \u00faskok?\n[[YELLOW]]\u00daskok je \u0161ance na rozp\u016flen\u00ed \u0161kod\n[[YELLOW]]kter\u00e9 by jsi z\u00edskal v boji.\n[[YELLOW]]Je ovlivn\u011bn tv\u00fdmi dovednostmi
 Guides.Axes=Pruvodce jiz brzy...
@@ -425,6 +471,7 @@ Item.Injured.Wait=Predchvili jsi byl zranen a musis pockat az budes moci pouzit 
 Skills.Disarmed=[[DARK_RED]]Byl jsi odzbrojen!
 Skills.Header=[[RED]]-----[][[GREEN]]{0}[[RED]][]-----
 Skills.NeedMore=[[DARK_RED]]Potrebujes vic
+Skills.Parents=RODI\u010cE
 Skills.Stats=[[YELLOW]]{0}[[GREEN]]{1}[[DARK_AQUA]] XP([[GRAY]]{2}[[DARK_AQUA]]/[[GRAY]]{3}[[DARK_AQUA]])
 Skills.TooTired=[[RED]]Si moc unaveny na pouziti teto schopnosti znovu.
 Stats.Header.Combat=[[GOLD]]-=BOJOVE DOVEDNOSTI=-
@@ -439,10 +486,43 @@ Perks.activationtime.name=Vytrvalost
 Perks.activationtime.desc=Prodlu\u017euje pou\u017eit\u00ed schopnosti na {0} sekund.
 Hardcore.Player.Loss=[GOLD]][mcMMO] [[DARK_RED]]Ztratil jsi [[BLUE]]{0}[[DARK_RED]] za smrt.
 Vampirism.Killer.Success=[[GOLD]][mcMMO] [[DARK_AQUA]]Z\u00edskal jsi [[BLUE]]{0}[[DARK_AQUA]] level\u016f od [[YELLOW]]{1}.
+Hardcore.Disabled=[[GOLD]][mcMMO] Hardcore m\u00f3d vypnut.
+Hardcore.Enabled=[[GOLD]][mcMMO] Hardcore m\u00f3d zapnut.
+Hardcore.PercentageChanged=[[GOLD]][mcMMO] Procentu\u00e1lnost ztr\u00e1cen\u00ed stat\u016f byla zm\u011bn\u011bna na {0}.
+Vampirism.Disabled=[[GOLD]][mcMMO] Up\u00edrsk\u00fd m\u00f3d vypnut.
+Vampirism.Enabled=[[GOLD]][mcMMO] Up\u00edrsk\u00fd m\u00f3d zapnut.
+Vampirism.PercentageChanged=[[GOLD]][mcMMO] Procentu\u00e1lnost odcizen\u00ed stat\u016f byla zm\u011bn\u011bna na {0}.
 Spout.Donate=[[YELLOW]][mcMMO] P\u0159isp\u011bjte!
 Spout.Menu.ExitButton=V\u00fdchod
 Spout.Menu.HudButton.1=Typ HUD: {0}
 Spout.Menu.HudButton.2=Zm\u011b\u0148te si styl HUD!
 MOTD.Version=[[GOLD]][mcMMO] - verze [[DARK_AQUA]]{0}
 MOTD.Website=[[GOLD]][mcMMO] [[GREEN]]{0}[[YELLOW]] - Web mcMMO
+Commands.Description.addlevels=P\u0159id\u00e1v\u00e1 u\u017eivatelsk\u00e9 mcMMO \u00farovn\u011b
+Commands.Description.adminchat=Zap\u00edn\u00e1/vyp\u00edn\u00e1 mcMMO administr\u00e1torsk\u00fd chat nebo odes\u00edl\u00e1 administr\u00e1torsk\u00e9 chatov\u00e9 zpr\u00e1vy
+Commands.Description.addxp=P\u0159id\u00e1 u\u017eivateli mcMMO XP
+Commands.Description.hardcore=Upravuje mcMMO hardcore procentu\u00e1lnost nebo zap\u00edn\u00e1/vyp\u00edn\u00e1 hardcore m\u00f3d
+Commands.Description.inspect=Zobraz\u00ed detailn\u00ed mcMMO info jin\u00e9ho hr\u00e1\u010de
+Commands.Description.mcability=Zap\u00edn\u00e1/vyp\u00edna p\u0159ipraven\u00ed mcMMO schopnost\u00ed kliknut\u00edm prav\u00e9ho tla\u010d\u00edtka my\u0161i
+Commands.Description.mcgod=Zap\u00edn\u00e1/vyp\u00edn\u00e1 mcMMO nesmrteln\u00fd m\u00f3d
+Commands.Description.mchud=Zm\u011bn\u00ed tv\u016fj mcMMO HUD styl
+Commands.Description.mcmmo=Zobraz\u00ed stru\u010dn\u00fd popis mcMMO
+Commands.Description.mcnotify=P\u0159ep\u00edn\u00e1 zobrazov\u00e1n\u00ed upozor\u0148ov\u00e1n\u00ed mcMMO schopnost\u00ed v chatu na zapnuto/vypnuto
+Commands.Description.mcpurge=Pro\u010dist\u00ed u\u017eivatele bez mcMMO \u00farovn\u00ed a u\u017eivatele kter\u00e9 se nep\u0159ipojili za posledn\u00edch {0} m\u011bs\u00edc\u016f z mcMMO datab\u00e1ze.
+Commands.Description.mcrank=Zobraz\u00ed hr\u00e1\u010dsk\u00e9 mcMMO \u017eeb\u0159\u00ed\u010dky
+Commands.Description.mcrefresh=Obnovuje v\u0161echny mcMMO cooldowny
 Commands.Description.mcremove=Odstranit u\u017eivatele z datab\u00e1ze mcMMO
+Commands.Description.mcstats=Zobraz\u00ed tv\u00e9 mcMMO \u00farovn\u011b a XP
+Commands.Description.mctop=Zobraz\u00ed mcMMO \u017eeb\u0159\u00ed\u010dky
+Commands.Description.mmoedit=Upravuje u\u017eivatelsk\u00e9 mcMMO \u00farovn\u011b
+Commands.Description.mmoupdate=Zkonvertuje mcMMO datab\u00e1zi z Flatfile do MySQL
+Commands.Description.party=Nastavuje r\u016fzn\u00e9 mcMMO nastaven\u00ed party
+Commands.Description.partychat=Zap\u00edn\u00e1/vyp\u00edn\u00e1 mcMMO chat party nebo odes\u00edl\u00e1 chatov\u00e9 zpr\u00e1vy
+Commands.Description.ptp=Teleport k mcMMO clenovi party
+Commands.Description.Skill=Zobraz\u00ed detailn\u00ed mcMMO informace o skillu {0}
+Commands.Description.skillreset=Resetuje u\u017eivatelsk\u00e9 mcMMO \u00farovn\u011b
+Commands.Description.vampirism=Upravuje mcMMO procenta up\u00edrstv\u00ed nebo zap\u00edn\u00e1/vyp\u00edna up\u00edrsk\u00fd m\u00f3d
+Commands.Description.xplock=Nastav\u00ed tv\u016fj mcMMO XP bar na konkr\u00e9tn\u00ed mcMMO skill
+Commands.Description.xprate=Upravuje mcMMO XP n\u00e1sobek nebo spou\u0161t\u00ed mcMMO XP ud\u00e1lost
+UpdateChecker.outdated=Pou\u017e\u00edv\u00e1\u0161 zastaralou verzi mcMMO!
+UpdateChecker.newavailable=Nov\u00e1 verze dostupn\u00e1 na BukkitDevu.
