--- a/src/main/resources/locale/locale_nl.properties
+++ b/src/main/resources/locale/locale_nl.properties
@@ -27,6 +27,7 @@ Excavation.Listener=Uitgraving:
 Excavation.SkillName=Uitgraving
 Excavation.Skills.GigaDrillBreaker.On=[[GREEN]]**GIGA DRILL BREKER GEACTIVEERD**
 Excavation.Skillup=[[YELLOW]]Uitgravings ervaring toegenomen met {0}. Totaal ({1})
+Fishing.Effect.8=Meester Hengelaar
 Fishing.Chance.Raining=[[BLUE]] Regen Bonus
 Fishing.ItemFound=[[GRAY]]Schat gevonden!
 Fishing.Listener=Vissen:
@@ -65,6 +66,7 @@ Repair.Arcane.Chance.Success=[[GRAY]] Mystiek Smeden Succes Percentage: [[YELLOW
 Repair.Arcane.Fail=[[RED]]Mysterieuze kracht heeft het voorwerp voorgoed verlaten.
 Repair.Arcane.Lost=[[RED]]Je hebt niet genoeg ervaring om de betoveringen te behouden
 Swords.Ability.Ready=[[GREEN]]**JIJ HOUD JOU WAPEN GEREED**
+Swords.Combat.Bleeding.Started=[[DARK_RED]] Jij bloedt!
 Swords.Combat.Bleeding.Stopped=[[GRAY]]Het bloeden is [[GREEN]]Gestopt[[GRAY]]!
 Swords.Combat.Bleeding=[[GREEN]]**VIJAND BLOED**
 Swords.Combat.Counter.Hit=[[DARK_RED]]Geraakt door een tegenaanval
@@ -95,6 +97,8 @@ Taming.Skillup=[[YELLOW]]Temmings ervaring toegenomen met {0}. Totaal ({1})
 Taming.Summon.Complete=[[GREEN]]Oproepen voltooid
 Unarmed.Ability.Berserk.Length=[[RED]]Razernij Lengte: [[YELLOW]]{0}s
 Unarmed.Effect.0=Razernij (KRACHT)
+Unarmed.Effect.6=Pijlen afweren
+Unarmed.Effect.7=Pijlen afweren
 Unarmed.Listener=Ongewapend:
 Unarmed.Skills.Berserk.Off=[[RED]]**Razernij is uitgewerkt**
 Unarmed.Skills.Berserk.On=[[GREEN]]**RAZERNIJ GEACTIVEERD**
@@ -141,6 +145,7 @@ Commands.Party.Invite.0=[[RED]]ALERT: [[GREEN]]Jij hebt een groep uitnodiging on
 Commands.Party.Invite=[[RED]]- Verstuur groepsuitnodiging
 Commands.Party.Create=[[GRAY]]Groep aangemaakt: {0}
 Commands.Party.Rename=[[GRAY]]Groep\'s naan veranderd naar: [[WHITE]]{0}
+Commands.Party.ToggleShareCategory=[[GRAY]]Groep item delen in [[GOLD]]{0} [[GRAY]]is nu [[DARK_AQUA]]{1}
 Commands.Party.AlreadyExists=[[DARK_RED]]Groep {0} bestaat al!
 Commands.Party.Kick=[[RED]]Je bent verwijderd uit de groep {0}!
 Commands.Party.Leave=[[RED]]Je hebt de groep verlaten
@@ -180,6 +185,7 @@ Party.Player.InSameParty=[[RED]]{0} zit al in uw groep!
 Party.PlayerNotInParty=[[DARK_RED]]{0} zit niet in een groep
 Party.Specify=[[RED]]Je moet een groep invullen.
 Party.Teleport.Dead=[RED]Je kan niet naar een dode speler teleporteren.
+Party.Teleport.Hurt=[[RED]]Je hebt schade opgelopen in de afgelopen {0} seconden en je kan niet teleporten.
 Party.Teleport.Target=[[GREEN]]{0} is naar jou toe gedeporteerd.
 Party.Teleport.Disabled=[[RED]]{0} staat groeps-teleportaties niet toe.
 Party.Join.Self=[[RED]]Je kan niet meedoen met jezelf!
@@ -199,6 +205,8 @@ Commands.XPGain.Mining=Het Mijnen van Steen & Erts
 Commands.XPGain.Repair=Repareren
 Commands.XPGain.Swords=Monsters aanvallen
 Commands.XPGain.Taming=Dieren Temmen, of vechten met je wolven
+Commands.XPGain.Unarmed=Monsters aanvallen
+Commands.XPGain.Woodcutting=Bomen omhakken
 Commands.XPGain=[[DARK_GRAY]]XP GEWONNEN: [[WHITE]]{0}
 Commands.xplock.locked=[[GOLD]]Jou XP BALK is nu bevroren op {0}!
 Commands.xplock.unlocked=[[GOLD]]Jou XP BALK is nu[[GREEN]]ONTGRENDELD[[GOLD]]!
@@ -206,8 +214,11 @@ Commands.xprate.over=[[RED]]mcMMO XP Verdubbeling Evenement is VOORBIJ!!
 Commands.xprate.proper.0=[[RED]]Juiste gebruiking om de XP snelheid te veranderen is /xprate <integer> <true/false>
 XPRate.Event=[[GOLD]]mcMMO is momenteel in een XP verdubbeling evenement! XP verdubbeling is {0}x!
 Effects.Effects=EFFECTEN
+Effects.Child=[[DARK_GRAY]]LVL: [[GREEN]]{0}
+Effects.Parent=[[GOLD]]{0} -
 Guides.Axes=Guide coming soon...
 Guides.Excavation=[[DARK_AQUA]]About Excavation:\n[[YELLOW]]Excavation is the act of digging up dirt to find treasures.\n[[YELLOW]]By excavating the land you will find treasures.\n[[YELLOW]]The more you do this the more treasures you can find.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill you must dig with a shovel in hand.\n[[YELLOW]]Only certain materials can be dug up for treasures and XP.\n[[DARK_AQUA]]Compatible Materials:\n[[YELLOW]]Grass, Dirt, Sand, Clay, Gravel, Mycelium, Soul Sand\n\n[[DARK_AQUA]]How to use Giga Drill Breaker:\n[[YELLOW]]With a shovel in hand right click to ready your tool.\n[[YELLOW]]Once in this state you have about 4 seconds to make\n[[YELLOW]]contact with Excavation compatible materials this will\n[[YELLOW]]activate Giga Drill Breaker.\n[[DARK_AQUA]]What is Giga Drill Breaker?\n[[YELLOW]]Giga Drill Breaker is an ability with a cooldown\n[[YELLOW]]tied to Excavation skill. It triples your chance\n[[YELLOW]]of finding treasures and enables instant break\n[[YELLOW]]on Excavation materials.\n\n[[DARK_AQUA]]How does Treasure Hunter work?\n[[YELLOW]]Every possible treasure for Excavation has its own\n[[YELLOW]]skill level requirement for it to drop, as a result it\'s\n[[YELLOW]]difficult to say how much it is helping you.\n[[YELLOW]]Just keep in mind that the higher your Excavation skill\n[[YELLOW]]is, the more treasures that can be found.\n[[YELLOW]]And also keep in mind that each type of Excavation\n[[YELLOW]]compatible material has its own unique list of treasures.\n[[YELLOW]]In other words you will find different treasures in Dirt\n[[YELLOW]]than you would in Gravel.\n[[DARK_AQUA]]Notes about Excavation:\n[[YELLOW]]Excavation drops are completely customizeable\n[[YELLOW]]So results vary server to server.
+Guides.Header=[[GOLD]]-=[[GREEN]]{0} Handleiding[[GOLD]]=-
 Guides.Mining=[[DARK_AQUA]]About Mining:\n[[YELLOW]]Mining consists of mining stone and ores. It provides bonuses\n[[YELLOW]]to the amount of materials dropped while mining.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill, you must mine with a pickaxe in hand.\n[[YELLOW]]Only certain blocks award XP.\n\n[[DARK_AQUA]]Compatible Materials:\n[[YELLOW]]Stone, Coal Ore, Iron Ore, Gold Ore, Diamond Ore, Redstone Ore,\n[[YELLOW]]Lapis Ore, Obsidian, Mossy Cobblestone, Ender Stone,\n[[YELLOW]]Glowstone, and Netherrack.\n\n[[DARK_AQUA]]How to use Super Breaker:\n[[YELLOW]]With a pickaxe in your hand, right click to ready your tool.\n[[YELLOW]]Once in this state, you have about 4 seconds to make contact\n[[YELLOW]]with Mining compatible materials, which will activate Super\n[[YELLOW]]Breaker.\n\n[[DARK_AQUA]]What is Super Breaker?\n[[YELLOW]]Super Breaker is an ability with a cooldown tied to the Mining\n[[YELLOW]]skill. It triples your chance of extra items dropping and\n[[YELLOW]]enables instant break on Mining materials.\n\n[[DARK_AQUA]]How to use Blast Mining:\n[[YELLOW]]With a detonator in hand, which is a flint & steel by default,\n[[YELLOW]]right-click on TNT from a distance. This will cause the TNT\n[[YELLOW]]to instantly explode.\n\n[[DARK_AQUA]]How does Blast Mining work?\n[[YELLOW]]Blast Mining is an ability with a cooldown tied to the Mining\n[[YELLOW]]skill. It gives bonuses when mining with TNT and allows you\n[[YELLOW]]to remote detonate TNT. There are three parts to Blast Mining.\n[[YELLOW]]The first part is Bigger Bombs, which increases blast radius.\n[[YELLOW]]The second is Demolitions Expert, which decreases damage\n[[YELLOW]]from TNT explosions. The third part simply increases the\n[[YELLOW]]amount of ores dropped from TNT and decreases the\n[[YELLOW]]debris dropped.
 Inspect.OfflineStats=mcMMO statistieken voor offline-speler [[YELLOW]]{0}
 Inspect.Stats=[[GREEN]]mcMMO Statistieken voor [[YELLOW]]{0}
@@ -221,3 +232,8 @@ Stats.Header.Combat=[[GOLD]]-=Strijd Ervaring=-
 Stats.Header.Gathering=[[GOLD]]-=VERZAMELAAR VAARDIGHEDEN=-
 Stats.Header.Misc=[[GOLD]]-=MISC ERVARING=-
 Stats.Own.Stats=[[GREEN]][mcMMO] Stats
+Perks.lucky.name=Geluk
+Perks.lucky.bonus=[[GOLD]] ({0} met Geluks Perk)
+Perks.activationtime.name=Uithoudingsvermogen
+UpdateChecker.outdated=U gebruikt een verouderde versie van mcMMO!
+UpdateChecker.newavailable=Er is een nieuwe versie beschikbaar op BukkitDev.
