--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -114,6 +114,7 @@ Herbalism.Effect.8=Doppel Drops (Alle Pflanzen)
 Herbalism.Effect.9=Verdoppelt die normale Ausbeute (Loot)
 Herbalism.Effect.10=Hylian Gl\u00fcck
 Herbalism.Effect.11=Gibt eine kleine M\u00f6glichkeit, seltene Gegenst\u00e4nde zu finden
+Herbalism.Effect.12=Pilz Daumen
 Herbalism.HylianLuck=[[GREEN]]Heute ist das Gl\u00fcck von Hyrule mit dir!
 Herbalism.Listener=Pflanzenkunde:
 Herbalism.SkillName=PFLANZENKUNDE
@@ -395,6 +396,8 @@ Commands.Usage.3=[[RED]]Proper usage is /{0} {1} {2} {3}
 Commands.Usage.Level=level
 Commands.Usage.Message=message
 Commands.Usage.Page=page
+Commands.Usage.PartyName=Gruppenname
+Commands.Usage.Password=Passwort
 Commands.Usage.Player=player
 Commands.Usage.Skill=skill
 Commands.Usage.XP=xp
@@ -419,6 +422,11 @@ Party.Teleport.Player=[[GREEN]]Du wurdest zu {0} teleportiert.
 Party.Teleport.Self=[[RED]]You can\'t teleport to yourself!
 Party.Teleport.Target=[[GREEN]]{0} hat sich zu dir teleportiert.
 Party.Unlocked=[[AQUA]]Gruppe entsperrt
+Party.Disband=[[GRAY]]Deine Gruppe wurde aufgel\u00f6st
+Party.ShareType.Exp=Exp
+Party.ShareType.Item=Item
+Party.ShareMode.None=Nicht
+Party.ShareMode.Random=Zuf\u00e4llig
 Commands.XPGain.Acrobatics=Fallen
 Commands.XPGain.Archery=Monster angreifen
 Commands.XPGain.Axes=Monster angreifen
@@ -444,6 +452,7 @@ Commands.xprate.started.1=[[GOLD]]Die mcMMO XP RATE liegt nun bei {0}x!
 XPRate.Event=[[GOLD]]mcMMO hat gerade ein XP-RATE Event. Derzeitige XP Rate: {0}x!
 Effects.Effects=EFFEKTE
 Effects.Level=[[DARK_GRAY]]LVL: [[GREEN]]{0} [[DARK_AQUA]]XP[[YELLOW]]([[GOLD]]{1}[[YELLOW]]/[[GOLD]]{2}[[YELLOW]])
+Effects.Parent=[[GOLD]]{0} -
 Effects.Template=[[DARK_AQUA]]{0}: [[GREEN]]{1}
 Guides.Acrobatics=[[DARK_AQUA]]\u00dcber Akrobatik:\n[[YELLOW]]Akrobatik ist die Kunst, sich in mcMMO anmutig zu bewegen.\n[[YELLOW]]Es bietet Kampf- und Umgebungsschaden-Boni.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]Um XP in diesem Skill zu bekommen, musst du im Kapf Ausweichen\n[[YELLOW]]oder St\u00fcrze aus grosser H\u00f6he \u00fcberlebe.\n\n[[DARK_AQUA]]Wie funktioniert Abrollen?\n[[YELLOW]]Du hast eine passive Chance Fallschaden zu negieren.\n[[YELLOW]]W\u00e4hrend du f\u00e4llst, kannst du dich b\u00fccken um\n[[YELLOW]]um die Chancen zu verdoppeln!\n[[YELLOW]]Dies l\u00f6st eine grazi\u00f6se Rolle aus anstatt einer Normalen.\n[[YELLOW]]Grazi\u00f6se Rollen sind wie Normale, haben aber die doppelte Chance\n[[YELLOW]]ausgel\u00f6st zu werden und bieten mehr Sicherheit gegen Schaden.\n[[YELLOW]]Die Chance auf Abrollen ist an dein Skill-Level gebunden.\n[[DARK_AQUA]]Wie funktionier Ausweichen?\n[[YELLOW]]Ausweichen bietet eine passive Chance auf halben Schaden\n[[YELLOW]]falls du im  Kampf verletzt wirst.\n[[YELLOW]]Ausweichen ist an dein Skill-Level gebunden.
 Guides.Axes=[[DARK_AQUA]]About Axes:\n[[YELLOW]]With the Axes skill you can use your axe for much more then\n[[YELLOW]]just deforesting! You can hack and chop away at mobs\n[[YELLOW]]and players to gain XP, hitting mobs with the effect of\n[[YELLOW]]knockback and inflicting DEADLY criticals on mobs and players.\n[[YELLOW]]Your axe also becomes a hand-held woodchipper,\n[[YELLOW]]breaking down the enemy\'s armor with ease as your level\n[[YELLOW]]increases.\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill you need hit other mobs or players\n[[YELLOW]]with an Axe.\n\n[[DARK_AQUA]]How does Skull Splitter work?\n[[YELLOW]]This ability allows you to deal an AoE (Area of Effect) hit.\n[[YELLOW]]This AoE hit will deal half as much damage as you did to the\n[[YELLOW]]main target, so it\'s great for clearing out large piles of mobs.\n[[DARK_AQUA]]How does Critical Strikes work?\n[[YELLOW]]Critical Strikes is a passive ability which gives players a\n[[YELLOW]]chance to deal additional damage.\n[[YELLOW]]With the default settings, every 2 skill levels in Axes awards a\n[[YELLOW]]0.1% chance to deal a Critical Strike, causing 2.0 times damage\n[[YELLOW]]to mobs or 1.5 times damage against other players.\n\n\n[[DARK_AQUA]]How does Axe Mastery work?\n[[YELLOW]]Axe Mastery is a passive ability that will add additional damage\n[[YELLOW]]to your hits when using Axes.\n[[YELLOW]]By default, the bonus damage increases by 1 every 50 levels,\n[[YELLOW]]up to a cap of 4 extra damage at level 200.\n\n\n\n[[DARK_AQUA]]How does Armor Impact work?\n[[YELLOW]]Strike with enough force to shatter armor!\n[[YELLOW]]Armor Impact has a passive chance to damage your\n[[YELLOW]]opponent\'s armor. This damage increases as you level in Axes.\n\n\n\n\n[[DARK_AQUA]]How does Greater Impact work?\n[[YELLOW]]You have a passive chance to achieve a greater impact when\n[[YELLOW]]hitting mobs or players with your axe.\n[[YELLOW]]By default this chance is 25%. This passive ability has an\n[[YELLOW]]extreme knockback effect, similar to the Knockback II\n[[YELLOW]]enchantment. In addition, it deals bonus damage to the target.
@@ -453,6 +462,7 @@ Guides.Header=[[GOLD]]-=[[GREEN]]{0} Guide[[GOLD]]=-
 Guides.Mining=[[DARK_AQUA]]\u00dcber Bergbau:\n[[YELLOW]]Bergbau beinhaltet das Abbauen von Steinen und Erzen. Es bietet Boni\n[[YELLOW]]auf die Anzahl der Drops beim Abbau.\n\n[[DARK_AQUA]]XP Zuwachs:\n[[YELLOW]]Um XP in diesem Skill zu bekommen XP, musst du mit einer Spitzhacke in der Hand abbauen.\n[[YELLOW]]Nur bestimmte Materialien gew\u00e4hren XP.\n\n[[DARK_AQUA]]Kompatible Materialien:\n[[YELLOW]]Stein, Kogleerz, Eisenerz, Gilderz, Diemanterz, Redstoneerz,\n[[YELLOW]]Lapiserz, Obsidian, Moosiger Pflasterstein, Endstein,\n[[YELLOW]]Glowstone und Netherstein.\n\n[[DARK_AQUA]]Super-Brecher benutzen:\n[[YELLOW]]Rechtsklicke mit einer Spitzhacke in deiner Hand um dich zu vorzubereiten.\n[[YELLOW]]Bist zu vorbereitet, hast du 4 Sekunden um\n[[YELLOW]]um im geeigneten Material mit dem Abbau zu beginnen, dies\n[[YELLOW]]aktiviert den Super-Brecher.\n\n[[DARK_AQUA]]Was ist der Super-Brecher?\n[[YELLOW]]Der Super-Brecher ist eine F\u00e4higkeit mit Abklingzeit, welche an\n[[YELLOW]]den Bergbau Skill gebunden ist. Sie bitet die Chance\n[[YELLOW]]auf dreifach Drops und aktiviert Instant-Abbau von abbaubaren Materialien.\n\n[[DARK_AQUA]]How to use Blast Mining:\n[[YELLOW]]With a detonator in hand, which is a flint & steel by default,\n[[YELLOW]]right-click on TNT from a distance. This will cause the TNT\n[[YELLOW]]to instantly explode.\n\n[[DARK_AQUA]]Funktion von Z\u00fcndstoff?\n[[YELLOW]]Z\u00fcndstoff ist eine F\u00e4higkeit mit Abklingzeit, welche an den Bergbauskill gebunden ist.\n[[YELLOW]]Sie vergibt Boni, falls mit TNT Abgebaut wird und erlaubt\n[[YELLOW]]TNT aus Entfernung zu z\u00fcnden. Z\u00fcndstoff besteht aus 3 Teilen.\n[[YELLOW]]Teil 1 ist Sprengmeister, welcher den Sprengradius erh\u00f6ht.\n[[YELLOW]]Teil 2 ist Explosions-Experte, welcher den Schaden von\n[[YELLOW]]TNT Explosionen minimiert. Teil 3 erh\u00f6ht einfach\n[[YELLOW]]die Anzahl von gefundenen Erzen und minimiert dabei den Schutt.
 Guides.Page.Invalid=Not a valid page number!
 Guides.Page.OutOfRange=Diese Seite existiert nicht, es gibt insgesamt nur {0} Seiten.
+Guides.Smelting=Kommt d\u00e4mn\u00e4chst
 Guides.Usage=[[RED]] Usage is /{0} ? [page]
 Inspect.Offline=[[RED]]Du hast keine Rechte um ausgeloggte Spieler zu inspizieren!
 Inspect.OfflineStats=mcMMO Werte f\u00fcr ausgeloggte Spieler [[YELLOW]]{0}
@@ -464,6 +474,7 @@ Item.Injured.Wait=[[WHITE]]Du wurdest k\u00fcrzlich verletzt und musst [[YELLOW]
 Skills.Disarmed=[[DARK_RED]]Du wurdest entwaffnet!
 Skills.Header=[[RED]]-----[][[GREEN]]{0}[[RED]][]-----
 Skills.NeedMore=[[DARK_RED]]Du ben\u00f6tigst mehr [[GRAY]]{0}
+Skills.Parents=Eltern
 Skills.Stats=[[YELLOW]]{0}[[GREEN]]{1}[[DARK_AQUA]] XP([[GRAY]]{2}[[DARK_AQUA]]/[[GRAY]]{3}[[DARK_AQUA]])
 Skills.TooTired=[[RED]]Du bist zu ausgelaugt, um diese F\u00e4higkeit wieder nutzen zu k\u00f6nnen. [[YELLOW]]({0}s)
 Stats.Header.Combat=[[GOLD]]-=KAMPF SKILLS=-
@@ -503,3 +514,7 @@ MOTD.PerksPrefix=[[RED]][mcMMO Perks]
 MOTD.Vampire.Stats=[[GOLD]][mcMMO] [[DARK_AQUA]]Vampirism Stat Leech: [[DARK_RED]]{0}%
 MOTD.Version=[[GOLD]][mcMMO] Running version [[DARK_AQUA]]{0}
 MOTD.Website=[[GOLD]][mcMMO] [[GREEN]]{0}[[YELLOW]] - mcMMO Website
+Smelting.Effect.0=Brennstoff Effektivit\u00e4t
+Smelting.Effect.2=Doppelte Schmelzchance
+Smelting.Listener=Schmelzen:
+Smelting.SkillName=Schmelzen
