--- a/src/main/resources/locale/locale_pt_BR.properties
+++ b/src/main/resources/locale/locale_pt_BR.properties
@@ -52,7 +52,9 @@ Party.Password.Set=[[GREEN]]Senha da equipe: {0}
 Party.Unlocked=[[GRAY]]Equipe foi Destrancada
 Commands.XPGain.Acrobatics=CAINDO
 Commands.XPGain.Excavation=Cavando e achando tesouros
+Commands.XPGain.Herbalism=Colhendo Ervas
 Commands.XPGain.Mining=Minerar Pedra & Min\u00e9rio
+Commands.XPGain.Taming=Domesticar animais, ou combater com os seus lobos
 Commands.XPGain=[[DARK_GRAY]]XP ADQUIRIDO: [[WHITE]]{0}
 Commands.xplock.locked=[[GOLD]]Sua barra de XP BAR est\u00e1 travada em {0}!
 Commands.xplock.unlocked=[[GOLD]]Sua barra de XP foi [[GREEN]]DESTRAVADA[[GOLD]]!
