Added "Ice Fishing" ability to Fishing

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -101,8 +101,10 @@ Excavation.Skillup=[[YELLOW]]Excavation skill increased by {0}. Total ({1})
 Fishing.Ability.Chance=[[RED]]Bite Chance: [[YELLOW]]{0}
 Fishing.Ability.Info=[[RED]]Magic Hunter: [[GRAY]] **Improves With Treasure Hunter Rank**
 Fishing.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (SHAKE)
+Fishing.Ability.Locked.1=LOCKED UNTIL {0}+ SKILL (ICE FISHING)
 Fishing.Ability.Rank=[[RED]]Treasure Hunter Rank: [[YELLOW]]{0}/5
 Fishing.Ability.Shake=[[RED]]Shake Chance: [[YELLOW]]{0}
+Fishing.Ability.IceFishing=[[RED]]Ice Fishing: Go fishing in ice
 Fishing.Ability.FD=[[RED]]Fisherman''s Diet: [[YELLOW]]Rank {0}
 Fishing.Effect.0=Treasure Hunter (Passive)
 Fishing.Effect.1=Fish up misc. objects
@@ -114,6 +116,8 @@ Fishing.Effect.6=Fisherman's Diet
 Fishing.Effect.7=Improves hunger restored from fished foods
 Fishing.Effect.8=Master Angler
 Fishing.Effect.9=Improves chance of getting a bite while fishing
+Fishing.Effect.10=Ice Fishing
+Fishing.Effect.11=Allows you to fish in icy biomes
 Fishing.Enchant.Chance=[[RED]]Magic Hunter Chance: [[YELLOW]]{0}
 Fishing.Chance.Raining=[[BLUE]] Rain Bonus
 Fishing.ItemFound=[[GRAY]]Treasure found!
