--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,6 +8,7 @@ Key:
   - Removal
   
 Version 1.4.06-dev
+ + Added "Ice Fishing" ability to Fishing
  + Added global scoreboards to track skill rankings (display using /mctop)
  + Added per-player scoreboard displays for the /inspect, /mcrank, /mcstats, and /<skillname> commands
  + Added tab-complete support for all commands
